# AudioDNN

./: CONTRIBUTING.md  LICENSE  README.md
AudioSep_youtube/: .gitignore  README.md  app copy.py  app.py  convert_musdb18.py  download_dataset.py  main.py  pretrained_demucs_main.py  requirements.txt  train.py
audio_separation/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_basic.py  test_integration.py  test_model.py  test_training.py
audio_separation/.github/: copilot-instructions.md
audio_separation/configs/: unet_config.yaml
audio_separation/src/: evaluate.py  separate.py  train.py
audio_separation/src/models/: __init__.py  separator.py  unet.py
audio_separation/src/utils/: __init__.py  audio.py  metrics.py
keyword_spotting/: .gitignore  PROJECT_SUMMARY.md  README.md  bcresnet.py  data_utils.py  demo.py  requirements.txt  test_pipeline.py  train.py
keyword_spotting/.github/: copilot-instructions.md
keyword_spotting_custom/: .gitignore  README.md  README_EN.md  README_JP.md  README_app.md  app.py  download_and_train.py  model_size.py  requirements.txt  sound_classification_note.md  sound_classifier_5class.py  visualize_prediction.py
