[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unet-source-separation"
version = "0.1.0"
description = "U-Net based music source separation using PyTorch"
authors = [
    {name = "User", email = "user@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=1.8.0",
    "torchaudio>=0.8.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "librosa>=0.8.0",
    "musdb>=0.4.0",
    "museval>=0.4.0",
    "soundfile>=0.10.0",
    "matplotlib>=3.3.0",
    "tensorboard>=2.7.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.60.0",
    "einops>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/user/unet-source-separation"
Repository = "https://github.com/user/unet-source-separation"

[project.scripts]
train-unet = "src.train:main"
separate-audio = "src.separate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
